docs - pxf v6 new config and config changes (#528)
* docs - pxf v6 new config and config changes

* some misc easy edits requested by alex/francisco/david

* more misc edits

* fragment caching always enabled; remove property and topic

* add topic to configure PXF_LOGDIR

* PXF agent -> PXF Service

* add log levels, info about 3rd party log level

* more updates to PXF Service

* kerberos page - more updates to PXF Service

* identify info level default in cfg service level logging

* reword the default logging cfg statement

--- a/docs/content/about_pxf_dir.html.md.erb
+++ b/docs/content/about_pxf_dir.html.md.erb
@@ -26,12 +26,12 @@ The following PXF directories are installed to `$PXF_BASE` when you install Gree
 
 | Directory | Description                                                                                                                                                                                                                                |
 |--------------------------------|--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| conf/                | The location of user-customizable PXF configuration files for PXF runtime and logging configuration settings. This directory contains the `pxf-application.properties`, `pxf-env.sh`, `pxf-log4j2.xml`, and `pxf-profiles.xml` files. |
-| keytabs/  | The default location of the PXF service Kerberos principal keytab file.  The `keytabs/` directory and contained files are readable only by the Greenplum Database installation user, typically `gpadmin`. |
-| lib/     | The location of user-added runtime JAR dependencies. The `native/` subdirectory is the default PXF runtime directory for native libraries. |
+| conf/                | The location of [user-customizable PXF configuration files](config_files.html) for PXF runtime and logging configuration settings. This directory contains the `pxf-application.properties`, `pxf-env.sh`, `pxf-log4j2.xml`, and `pxf-profiles.xml` files. |
+| keytabs/  | The default location of the PXF Service Kerberos principal keytab file.  The `keytabs/` directory and contained files are readable only by the Greenplum Database installation user, typically `gpadmin`. |
+| lib/     | The location of [user-added runtime dependencies](reg_jar_depend.html). The `native/` subdirectory is the default PXF runtime directory for native libraries. |
 | logs/                | The PXF runtime log file directory. The `logs/` directory and log files are readable only by the Greenplum Database installation user, typically `gpadmin`. |
-| run/         | The default PXF run directory. After starting PXF, this directory contains a PXF process id file, `pxf-app.pid`. The default `$PXF_OOM_DUMP_PATH` resides in a `pxf_heap_dump/` subdirectory. `run/` and contained files and directories are readable only by the Greenplum Database installation user, typically `gpadmin`. |
-| servers/  | The configuration directory for PXF servers; each subdirectory contains a server definition, and the name of the subdirectory identifies the name of the server. The default server is named `default`. The Greenplum Database administrator may configure other servers. |
+| run/         | The default PXF run directory. After starting PXF, this directory contains a PXF process id file, `pxf-app.pid`. `run/` and contained files and directories are readable only by the Greenplum Database installation user, typically `gpadmin`. |
+| servers/  | The configuration directory for [PXF servers](cfg_server.html); each subdirectory contains a server definition, and the name of the subdirectory identifies the name of the server. The default server is named `default`. The Greenplum Database administrator may configure other servers. |
 
 Refer to [Configuring PXF](instcfg_pxf.html) and [Starting PXF](cfginitstart_pxf.html#start_pxf) for detailed information about the PXF configuration and startup commands and procedures.
 
