--- a/docs/content/client_instcfg.html.md.erb
+++ b/docs/content/client_instcfg.html.md.erb
@@ -88,7 +88,7 @@ In this procedure, you use the `default`, or create a new, PXF server configurat
 
 ## <a id="client-cfg-update"></a>About Updating the Hadoop Configuration
 
-If you update your Hadoop, Hive, or HBase configuration while the PXF service is running, you must copy the updated configuration to the `$PXF_BASE/servers/<server_name>` directory and re-sync the PXF configuration to your Greenplum Database cluster. For example:
+If you update your Hadoop, Hive, or HBase configuration while the PXF Service is running, you must copy the updated configuration to the `$PXF_BASE/servers/<server_name>` directory and re-sync the PXF configuration to your Greenplum Database cluster. For example:
 
 ``` shell
 gpadmin@gpmaster$ cd $PXF_BASE/servers/<server_name>
