--- a/docs/content/instcfg_pxf.html.md.erb
+++ b/docs/content/instcfg_pxf.html.md.erb
@@ -20,5 +20,5 @@ To configure PXF, you must:
 
 3. If you plan to use PXF to access a network file system, perform the configuration procedure described in [Configuring a PXF Network File System Server](nfs_pxf.html#ex_fscfg).
 
-4. [Start PXF](cfginitstart_pxf.html).
+After you complete PXF configuration, you [Start PXF](cfginitstart_pxf.html).
 
