--- a/docs/content/intro_pxf.html.md.erb
+++ b/docs/content/intro_pxf.html.md.erb
@@ -30,7 +30,7 @@ PXF bundles all of the Hadoop JAR files on which it depends, and supports the fo
 
 ## <a id="arch"></a> Architectural Overview
 
-Your Greenplum Database deployment consists of a master node and multiple segment hosts. A single PXF agent process on each Greenplum Database segment host allocates a worker thread for each segment instance on a segment host that participates in a query against an external table. The PXF agents on multiple segment hosts communicate with the external data store in parallel.
+Your Greenplum Database deployment consists of a master node and multiple segment hosts. A single PXF Service process on each Greenplum Database segment host allocates a worker thread for each segment instance on a segment host that participates in a query against an external table. The PXF Services on multiple segment hosts communicate with the external data store in parallel.
 
 
 ## <a id="more"></a> About Connectors, Servers, and Profiles
