--- a/docs/content/monitor_pxf.html.md.erb
+++ b/docs/content/monitor_pxf.html.md.erb
@@ -21,9 +21,9 @@ specific language governing permissions and limitations
 under the License.
 -->
 
-The `pxf cluster status` command displays the status of the PXF service instance on all segment hosts in your Greenplum Database cluster. `pxf status` displays the status of the PXF service instance on the local (segment) host.
+The `pxf cluster status` command displays the status of the PXF Service instance on all segment hosts in your Greenplum Database cluster. `pxf status` displays the status of the PXF Service instance on the local (segment) host.
 
-Only the `gpadmin` user can request the status of the PXF service.
+Only the `gpadmin` user can request the status of the PXF Service.
 
 Perform the following procedure to request the PXF status of your Greenplum Database cluster.
 
