--- a/docs/content/ref/pxf-cluster.html.md.erb
+++ b/docs/content/ref/pxf-cluster.html.md.erb
@@ -2,7 +2,7 @@
 title: pxf cluster
 ---
 
-Manage the PXF configuration and the PXF service instance on all Greenplum Database hosts.
+Manage the PXF configuration and the PXF Service instance on all Greenplum Database hosts.
 
 ## <a id="topic1__section2"></a>Synopsis
 
@@ -29,15 +29,15 @@ sync
 
 The `pxf cluster` utility command manages PXF on the master, standby master, and on all Greenplum Database segment hosts. You can use the utility to:
 
-- Start, stop, and restart the PXF service instance on all segment hosts.
-- Display the status of the PXF service instance on all segment hosts.
+- Start, stop, and restart the PXF Service instance on all segment hosts.
+- Display the status of the PXF Service instance on all segment hosts.
 - Synchronize the PXF configuration from the Greenplum Database master host to the standby master and to all segment hosts.
 - Copy the PXF extension control file from the PXF installation on each host to the Greenplum installation on the host after a Greenplum upgrade.
 - Prepare a new `$PXF_BASE` runtime configuration directory.
 
 `pxf cluster` requires a running Greenplum Database cluster. You must run the utility on the Greenplum Database master host.
 
-(If you want to manage the PXF service instance on a specific segment host, use the `pxf` utility. See [`pxf`](pxf.html#topic1).)
+(If you want to manage the PXF Service instance on a specific segment host, use the `pxf` utility. See [`pxf`](pxf.html#topic1).)
 
 ## <a id="commands"></a>Commands
 
@@ -57,16 +57,16 @@ The `pxf cluster` utility command manages PXF on the master, standby master, and
 <dd>The command is a no-op.</dd>
 
 <dt>restart</dt>
-<dd>Stop, and then start, the PXF service instance on all segment hosts.</dd>
+<dd>Stop, and then start, the PXF Service instance on all segment hosts.</dd>
 
 <dt>start</dt>
-<dd>Start the PXF service instance on all segment hosts.</dd>
+<dd>Start the PXF Service instance on all segment hosts.</dd>
 
 <dt>status  </dt>
-<dd>Display the status of the PXF service instance on all segment hosts.</dd>
+<dd>Display the status of the PXF Service instance on all segment hosts.</dd>
 
 <dt>stop  </dt>
-<dd>Stop the PXF service instance on all segment hosts.</dd>
+<dd>Stop the PXF Service instance on all segment hosts.</dd>
 
 <dt>sync  </dt>
 <dd>Synchronize the PXF configuration (`$PXF_BASE`) from the master to the standby master and to all Greenplum Database segment hosts. By default, this command updates files on and copies files to the remote. You can instruct PXF to also delete files during the synchronization; see [Options](#options).</dd>
@@ -81,7 +81,7 @@ The `pxf cluster sync` command takes the following option:
 
 ## <a id="topic1__section5"></a>Examples
 
-Stop the PXF service instance on all segment hosts:
+Stop the PXF Service instance on all segment hosts:
 
 ``` shell
 $ pxf cluster stop
