--- a/docs/book/master_middleman/source/subnavs/pxf-subnav.erb
+++ b/docs/book/master_middleman/source/subnavs/pxf-subnav.erb
@@ -20,6 +20,7 @@
             <a href="/pxf/WIP/instcfg_pxf.html" format="markdown">Configuring PXF</a>
             <ul>
               <li><a href="/pxf/WIP/about_pxf_dir.html" format="markdown">About the PXF Installation and Configuration Directories</a></li>
+              <li><a href="/pxf/WIP/config_files.html" format="markdown">About the PXF Configuration Files</a></li>
               <li><a href="/pxf/WIP/install_java.html" format="markdown">Installing Java for PXF</a></li>
               <li><a href="/pxf/WIP/cfg_server.html" format="markdown">Configuring PXF Servers</a></li>
               <li class="has_submenu">
@@ -40,7 +41,6 @@
                   <li><a href="/pxf/WIP/hive_jdbc_cfg.html" format="markdown">Configuring the JDBC Connector for Hive Access (Optional)</a> </li>
                 </ul>
               </li>
-              <li><a href="/pxf/WIP/cfghostport.html" format="markdown">Configuring the PXF Agent Host and Port (Optional)</a> </li>
             </ul>
           </li>
           <li><a href="/pxf/WIP/upgrade_pxf_rpm.html" format="markdown">Upgrading PXF</a></li>
@@ -48,6 +48,14 @@
           <li><a href="/pxf/WIP/using_pxf.html" format="markdown">Granting Users Access to PXF</a></li>
           <li><a href="/pxf/WIP/reg_jar_depend.html" format="markdown">Registering PXF Library Dependencies</a></li>
           <li><a href="/pxf/WIP/monitor_pxf.html" format="markdown">Monitoring PXF</a></li>
+          <li class="has_submenu">
+            <span>Advanced PXF Configuration (Optional)</span>
+            <ul>
+              <li><a href="/pxf/WIP/cfghostport.html" format="markdown">PXF Service Host and Port</a></li>
+              <li><a href="/pxf/WIP/cfg_logging.html" format="markdown">Logging</a></li>
+              <li><a href="/pxf/WIP/cfg_mem.html" format="markdown">Memory and Threading</a></li>
+            </ul>
+          </li>
         </ul>
       </li>
       <li class="has_submenu">
