--- a/docs/content/cfginitstart_pxf.html.md.erb
+++ b/docs/content/cfginitstart_pxf.html.md.erb
@@ -24,41 +24,22 @@ under the License.
 
 PXF provides two management commands:
 
-- `pxf cluster` - manage all PXF service instances in the Greenplum Database cluster
-- `pxf` - manage the PXF service instance on a specific Greenplum Database host
+- `pxf cluster` - manage all PXF Service instances in the Greenplum Database cluster
+- `pxf` - manage the PXF Service instance on a specific Greenplum Database host
 
 The [`pxf cluster`](ref/pxf-cluster.html) command supports `init` (deprecated), `reset` (deprecated), `register`, `prepare`, `start`, `restart`, `status`, `stop`, and `sync` subcommands. When you run a `pxf cluster` subcommand on the Greenplum Database master host, you perform the operation on all segment hosts in the Greenplum Database cluster. PXF also runs the `prepare`, `register`, and `sync` commands on the standby master host.
 
-The [`pxf`](ref/pxf.html) command supports `init` (deprecated), `reset` (deprecated), `prepare`, `start`, `stop`, `restart`, `status`, and `register`  operations. These operations run locally. That is, if you want to start or stop the PXF agent on a specific Greenplum Database segment host, you log in to the host and run the command.
+The [`pxf`](ref/pxf.html) command supports `init` (deprecated), `reset` (deprecated), `prepare`, `start`, `stop`, `restart`, `status`, and `register`  operations. These operations run locally. That is, if you want to start or stop the PXF Service on a specific Greenplum Database segment host, you log in to the host and run the command.
 
 <div class="note">The procedures in this topic assume that you have added the <code>$PXF_HOME/bin</code> directory to your <code>$PATH</code>.</div>
 
 
 ## <a id="start_pxf"></a>Starting PXF
 
-After configuring PXF, you must start PXF on each segment host in your Greenplum Database cluster. The PXF service, once started, runs as the `gpadmin` user on default port 5888. Only the `gpadmin` user can start and stop the PXF service.
+After configuring PXF, you must start PXF on each segment host in your Greenplum Database cluster. The PXF Service, once started, runs as the `gpadmin` user on default port 5888. Only the `gpadmin` user can start and stop the PXF Service.
 
-If you want to change the default PXF configuration, you must update the configuration before you start PXF.
+If you want to change the default PXF configuration, you must update the configuration before you start PXF, or restart PXF if it is already running. See [About the PXF Configuration Files](config_files.html) for information about the user-customizable PXF configuration properties and the configuration update procedure.
 
-`$PXF_BASE/conf` includes these user-customizable configuration files:
-
-- `pxf-env.sh` - runtime configuration parameters
-- `pxf-log4j.properties` - logging configuration parameters
-- `pxf-profiles.xml` - custom profile definitions
-
-The `pxf-env.sh` file exposes the following PXF runtime configuration parameters:
-
-| Parameter  | Description | Default Value |
-|-----------|---------------| ------------|
-| JAVA_HOME    | The Java JRE home directory. | /usr/java/default |
-| PXF_LOGDIR   | The PXF log directory. | $PXF_BASE/logs |
-| PXF_JVM_OPTS  | Default options for the PXF Java virtual machine. | -Xmx2g -Xms1g |
-| PXF_MAX_THREADS  | Default for the maximum number of PXF threads. | 200 |
-| PXF_FRAGMENTER_CACHE  | Enable/disable fragment caching. | Enabled |
-| PXF_OOM_KILL  | Enable/disable PXF auto-kill on OutOfMemoryError. | Enabled |
-| PXF_OOM_DUMP_PATH  | Absolute pathname to dump file generated on OOM. | No dump file |
-
-You must synchronize any changes that you make to `pxf-env.sh`, `pxf-log4j.properties`, or `pxf-profiles.xml` to the Greenplum Database cluster, and (re)start PXF on each segment host.
 
 ### <a id="start_pxf_prereq" class="no-quick-link"></a>Prerequisites
 
@@ -85,7 +66,7 @@ Perform the following procedure to start PXF on each segment host in your Greenp
 
 ## <a id="stop_pxf"></a>Stopping PXF
 
-If you must stop PXF, for example if you are upgrading PXF, you must stop PXF on each segment host in your Greenplum Database cluster. Only the `gpadmin` user can stop the PXF service.
+If you must stop PXF, for example if you are upgrading PXF, you must stop PXF on each segment host in your Greenplum Database cluster. Only the `gpadmin` user can stop the PXF Service.
 
 ### <a id="stop_pxf_prereq" class="no-quick-link"></a>Prerequisites
 
@@ -111,7 +92,7 @@ Perform the following procedure to stop PXF on each segment host in your Greenpl
 
 If you must restart PXF, for example if you updated PXF user configuration files in `$PXF_BASE/conf`, you run `pxf cluster restart` to stop, and then start, PXF on all segment hosts in your Greenplum Database cluster.
 
-Only the `gpadmin` user can restart the PXF service.
+Only the `gpadmin` user can restart the PXF Service.
 
 ### <a id="restart_pxf_prereq" class="no-quick-link"></a>Prerequisites
 
