--- a/docs/content/config_files.html.md.erb
+++ b/docs/content/config_files.html.md.erb
@@ -32,7 +32,7 @@ The `pxf-env.sh` file exposes these PXF JVM configuration properties:
 | Parameter  | Description | Default Value |
 |-----------|---------------| ------------|
 | JAVA_HOME    | The path to the Java JRE home directory. | /usr/java/default |
-| PXF_LOGDIR   | The PXF log directory. | $PXF_BASE/logs |
+| [PXF_LOGDIR](cfg_logging.html#cfglogdir)   | The PXF log directory. | $PXF_BASE/logs |
 | PXF_RUNDIR   | The PXF run directory. | $PXF_BASE/run |
 | [PXF_JVM_OPTS](cfg_mem.html#pxf-heapcfg)  | The default options for the PXF Java virtual machine. | -Xmx2g -Xms1g |
 | [PXF_OOM_KILL](cfg_mem.html#pxf-cfgoom)  | Enable/disable PXF auto-kill on OutOfMemoryError (OOM). | true (enabled) |
