--- a/docs/content/ref/pxf-cluster.html.md.erb
+++ b/docs/content/ref/pxf-cluster.html.md.erb
@@ -15,6 +15,7 @@ where `<command>` is:
 ``` pre
 help
 init (deprecated)
+migrate
 prepare
 register
 reset (deprecated)
@@ -34,6 +35,7 @@ The `pxf cluster` utility command manages PXF on the master, standby master, and
 - Synchronize the PXF configuration from the Greenplum Database master host to the standby master and to all segment hosts.
 - Copy the PXF extension control file from the PXF installation on each host to the Greenplum installation on the host after a Greenplum upgrade.
 - Prepare a new `$PXF_BASE` runtime configuration directory.
+- Migrate PXF 5 `$PXF_CONF` configuration to `$PXF_BASE`.
 
 `pxf cluster` requires a running Greenplum Database cluster. You must run the utility on the Greenplum Database master host.
 
@@ -46,6 +48,9 @@ The `pxf cluster` utility command manages PXF on the master, standby master, and
 
 <dt>init (deprecated)</dt>
 <dd>The command is equivalent to the `register` command.</dd>
+
+<dt>migrate</dt>
+<dd>Migrate the configuration in a PXF 5 `$PXF_CONF` directory to `$PXF_BASE` on each Greenplum Database host. When you run the command, you must identify the PXF 5 configuration directory via an environment variable named `PXF_CONF`. PXF migrates the version 5 configuration to `$PXF_BASE`, copying and merging files and directories as necessary. <div class="note">You must manually migrate any <code>pxf-log4j.properties</code> customizations to the <code>pxf-log4j2.xml</code> file.</div></dd>
 
 <dt>prepare</dt>
 <dd>Prepare a new `$PXF_BASE` directory on each Greenplum Database host. When you run the command, you must identify the new PXF runtime configuration directory via an environment variable named `PXF_BASE`. PXF copies runtime configuration file templates and directories to this `$PXF_BASE`.</dd>
